# safirefuzz-experiments

./: .gitmodules  LICENSE  README.md
00_firmware/: README.md  stm32_sine.elf
01_fuzzing/: README.md  halucinator-patch.diff  safirefuzz_target.py
01_fuzzing/forkserver_libAFL/: Cargo.toml  README.md  libAFL_patch.diff
01_fuzzing/forkserver_libAFL/src/: main.rs
01_fuzzing/fuzzware/: README.md  collect_execs.sh  emulator_allow_disable_hal_trace.diff  pipeline_force_overwrite.diff  run_experiment.sh  run_targets.sh
02_coverage_collection/: README.md  eval_bbs_halucinator.py  fuzzware_genstats_with_hal.sh  fuzzware_genstats_without_hal.sh  ghidra_get_bbs.py  hal-fuzz_cov-col_patch.diff
02_coverage_collection/halhooks/: atmel_6lowpan_udp_rx.hal_hooks.txt  atmel_6lowpan_udp_tx.hal_hooks.txt  nxp_lwip_http.hal_hooks.txt  p2im_drone.hal_hooks.txt  p2im_plc.hal_hooks.txt  samr21_http.hal_hooks.txt  st-plc.hal_hooks.txt  stm32_tcp_echo_client.hal_hooks.txt  stm32_tcp_echo_server.hal_hooks.txt  stm32_udp_echo_client.hal_hooks.txt  stm32_udp_echo_server.hal_hooks.txt  wycinwyc.hal_hooks.txt
02_coverage_collection/replay_scripts/: replay_halucinator.sh  replay_libafl_halucinator.sh  replay_safire.sh
02_coverage_collection/valid_bb_files/: atmel_6lowpan_udp_rx.elf_bbs.txt  nxp_lwip_http.elf_bbs.txt  p2im_drone.elf_bbs.txt  p2im_plc.elf_bbs.txt  samr21_http.elf_bbs.txt  st-plc.elf_bbs.txt  stm32_tcp_echo_client.elf_bbs.txt  stm32_tcp_echo_server.elf_bbs.txt  stm32_udp_echo_client.elf_bbs.txt  wycinwyc.elf_bbs.txt  (+1 more)
03_case_studies/: README.md
04_eval_data/: README.md
(+315 files in other folders)
