[package]
name = "forkserver_ondisk"
version = "0.7.1"
authors = ["tokatoka <tokazerkje@outlook.com>", "Lukas Seidel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
libafl = { path = "../SAFIREFUZZ/LibAFL/libafl/" }
clap = { version = "3.0", features = ["default"] }
nix = "0.23"
